--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 # Temporary files created by R markdown
 *.utf8.md
 *.knit.md
+
+# Ignore database
+Amaryllidoideae.p*
+Amaryllidoideae_proteome.fasta
